# cpp-rpg-game-assignment

./: .gitignore  CMakeLists.txt  Player.cpp  Player.h  main.cpp
Classes/: Attack.cpp  Attack.h  Character.cpp  Character.h  GameManager.cpp  GameManager.h  HP.cpp  HP.h  NPCCharacter.cpp  NPCCharacter.h  PlayerCharacter.cpp  PlayerCharacter.h
include/: Attack.h  Character.h  GameManager.h  HP.h  PlayerCharacter.h
src/: Character.cpp  GameManager.cpp  HP.cpp  PlayerCharacter.cpp
